# rust_embedded_rl78_example

./: Cargo.toml
.cargo/: config
rl78hal_bindings/: Cargo.toml  build.rs
rl78hal_bindings/src/: iodefine.rs  lib.rs
src/: lib.rs
